Added second fraction

--- a/fe.htm
+++ b/fe.htm
@@ -11,7 +11,11 @@
 	  var context = c.getContext("2d");
 
 	  var f = math.frac.fracFactory();
-	  f.draw( util.getTranslatedContext(context, 0, 0) );
+	  f.draw( util.getTranslatedContext(context, 10, 10) );
+
+	  var f2 = math.frac.fracFactory();
+	  f2.draw( util.getTranslatedContext(context, 50, 10) );
+	  
 	</script>
 	
   </body>
