--- a/fe.htm
+++ b/fe.htm
@@ -1,42 +1,19 @@
 <html>
-  <body>
-	<canvas id="myCanvas" width="500" height="500" style="border:1px solid #000000;"></canvas>
+    <body>
+	    <canvas id="myCanvas"
+                width="500"
+                height="500"
+                style="border:1px solid #000000;"></canvas>
 
-	<!-- <script type="text/javascript" src="libs/Canvas-Input/src/canvasinput.js"></script> -->
+	    <script src="dist/js/all.js"></script>
 
-	<script type="text/javascript" src="libs/CanvasInput/CanvasInput.js"></script>
+	    <script>
+         var canvas = document.getElementById("myCanvas");
+	     var context = canvas.getContext("2d");
 
-	<script src="js/util.js"></script>
-	<script src="js/math/frac.js"></script>
-	<script src="js/math/empty.js"></script>
+         go(canvas, context);
 
-	<script>
-        var fe = fe || {};
-        fe.c = document.getElementById("myCanvas");
+        </script>
 
-	    var context = fe.c.getContext("2d");
-
-	    <!-- var f = math.frac.fracFactory(); -->
-	    <!-- f.draw( util.getTranslatedContext(context, fe.c, 10, 10) ); -->
-
-	    var f2 = math.frac.fracFactory();
-	    f2.draw( util.getTranslatedContext(context, fe.c, 50, 10) );
-
-	    var empty = math.empty.emptyFactory();
-	    empty.draw( util.getTranslatedContext(context, fe.c, 100, 100) );
-
-
-	  <!-- var test = new CanvasText( c, { -->
-	  <!-- x: 0, -->
-	  <!-- y: 0, -->
-	  <!-- width: 50, -->
-	  <!-- height: 50, -->
-	  <!-- context: util.getTranslatedContext(context, c, 150, 100), -->
-	  <!-- placeholder: 'Enter your username...' -->
-	  <!-- } ); -->
-
-
-    </script>
-
-  </body>
+    </body>
 </html>
