Things are getting interesting now

--- a/fe.htm
+++ b/fe.htm
@@ -5,6 +5,12 @@
                 height="500"
                 style="border:1px solid #000000;"></canvas>
 
+        <p>Rendering canvas:</p>
+	    <canvas id="renderCanvas"
+                width="500"
+                height="500"
+                style="border:1px solid #000000;"></canvas>
+
 	    <script src="dist/js/all.js"></script>
 
 	    <script>
