Getting ready to share

--- a/fe.htm
+++ b/fe.htm
@@ -17,7 +17,7 @@
          var canvas = document.getElementById("myCanvas");
 	     var context = canvas.getContext("2d");
 
-         go(canvas, context);
+         drawables = go(canvas, context);
 
         </script>
 
