Now only 300 typescript errors

--- a/MathJax/unpacked/test3.htm
+++ b/MathJax/unpacked/test3.htm
@@ -54,7 +54,8 @@
         </script>
 
         <h2>Here's the math:</h2>
-        <div id="all"><p>$$x = \hat{z} + \frac{-b + \sqrt{b^2 - 4ac}}{2a}$$</p><textarea id="tex" cols="100"></textarea></div>
+        <!-- <div id="all"><p>$$x = \hat{z} + \frac{-b + \sqrt{b^2 - 4ac}}{2a}$$</p><textarea id="tex" cols="100"></textarea></div> -->
+        <div id="all"><p>$$\lim_{x\rightarrow5}x^{2}$$</p></div>
         <!-- <div id="all"><p>$$a + b * c / d! ~ x - y;"$$</p></div> -->
         <h2>MML visualization:</h2>
         <ul id="mmlviz"></ul>
