Working on demos

--- a/MathJax/unpacked/demo.htm
+++ b/MathJax/unpacked/demo.htm
@@ -27,7 +27,7 @@
                 } catch (e) {
                     texarea.val('INVALID')
                 }
-                MathJax.OutputJax.EditableSVG.visualizeJax(found, $('#mmlviz'))
+                 /* MathJax.OutputJax.EditableSVG.visualizeJax(found, $('#mmlviz')) */
              })
              texarea.on('keyup', function() {
                 var $script = $('#'+inputID)
