Checking stuff in

--- a/MathJax/unpacked/demo.htm
+++ b/MathJax/unpacked/demo.htm
@@ -5,7 +5,18 @@
                 src="MathJax.js?config=TeX-AMS-MML_EditableSVG">
         </script>
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
+
+        <style>
+         #mmlviz {
+             font-size: 5px;
+             ul {
+                 line-height: 5px;
+             }
+         }
+        </style>
     </head>
     <body>
         <script>
@@ -53,6 +64,10 @@
         </style>
 
         <div class="main-input-box"><h5>Math</h5>$$x$$</div>
+
+        <h2>MML visualization:</h2>
+        <ul id="mmlviz"></ul>
+
         <div class="main-input-box"><h5>TeX</h5><textarea rows="5" id="tex" style="width: 100%; font-family: monospace">x</textarea></div>
     </body>
 </html>
